# ChangeLog for sys-kernel/linux-headers
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.268 2008/05/12 16:14:34 corsair Exp $

  12 May 2008; Markus Rothe <corsair@gentoo.org>
  linux-headers-2.6.24.ebuild:
  Stable on ppc64

*linux-headers-2.6.25-r2 (10 May 2008)

  10 May 2008; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.6.25-r2.ebuild:
  Fix up HZ on alpha and friends #218858 by Tobias Klausmann.

  22 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  linux-headers-2.6.25-r1.ebuild:
  2.6.25 is broken on alpha, see bug #218858

  21 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  linux-headers-2.6.24.ebuild:
  ia64/sparc stable

*linux-headers-2.6.25-r1 (20 Apr 2008)

  20 Apr 2008; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.6.25-r1.ebuild:
  Redo some of the libc injections and fixup some of the net-related code.

*linux-headers-2.6.25 (20 Apr 2008)

  20 Apr 2008; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.6.25.ebuild:
  Version bump.

*linux-headers-2.4.36 (12 Apr 2008)

  12 Apr 2008; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.4.36.ebuild:
  Version bump.

  12 Apr 2008; Mike Frysinger <vapier@gentoo.org>
  linux-headers-2.4.33.3.ebuild:
  Stabilize for everyone.

  04 Feb 2008; Mike Frysinger <vapier@gentoo.org>
  linux-headers-2.6.24.ebuild:
  Newer kernels include unifdef so we dont need to DEPEND on it anymore.

  27 Jan 2008; Christoph Mende <angelos@gentoo.org>
  linux-headers-2.6.23-r3.ebuild:
  Stable on amd64, bug #207386

*linux-headers-2.6.24 (26 Jan 2008)

  26 Jan 2008; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.6.24.ebuild:
  Version bump.

  25 Jan 2008; Mike Frysinger <vapier@gentoo.org>
  linux-headers-2.6.23-r3.ebuild:
  Expand the egrep check to look for short types like u64.

  31 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  +linux-headers-2.6.17-r2.ebuild: