@@ -7,13 +7,13 @@ AUX unistd.h-i386-pic.patch 4312 RMD160 fad74589ec159b556452b494a766a31cf23d8d1a
 DIST gentoo-headers-2.6.23-5.tar.bz2 8185 RMD160 5c2bb6deb7ab7c2180cc4395d8a56f2ad92b32ed SHA1 d015ce4f8ca1a36b8602f2c5da56da60585815d2 SHA256 108499f4b07d1bb6c4dc6930ba0c7d48499a6dfa2bd2f7d9661b84a7a4f339e9
 DIST gentoo-headers-2.6.24-1.tar.bz2 7393 RMD160 babf5b219a193154c4d33201404a39db486e9a89 SHA1 f1414703e3109346603d3dc39c92dfd6d0b2c6c0 SHA256 0edb9e934f8e6d76dbb5a911b595718a6d516da7561c5012a1ca8d5fbe04c37f
 DIST gentoo-headers-2.6.25-2.tar.lzma 8168 RMD160 6f5a5311fac14f0a661e0fe7555f7b124d71661c SHA1 2cde13f076b6e298b151c748b44d7952a82910d1 SHA256 2dfb1b47056822b10feccefe1b72c398f652704bce8d5427804e714cc31461dd
-DIST gentoo-headers-2.6.25-3.tar.lzma 8605 RMD160 b0015a8e8ef7d1b1b5b21076fb5a7733efc5006d SHA1 1cd3dd4405b2f94d94b25b01a9a9be61cea06807 SHA256 1f11c5f2508dc4202f583024655650e863d77824a66b8c4fdfe70595dfc4a25f
+DIST gentoo-headers-2.6.25-4.tar.lzma 8608 RMD160 df944a12add1ee8daa9d8b4c7b3d2a381958baf3 SHA1 cef481da3dfeb0b1605c67ff5083da934bfab9ac SHA256 67a7f1f1afdf5b4385bb096a40e8ebc82b5a7daf0d69e64fc94923378eef720c
 DIST gentoo-headers-base-2.6.23.tar.bz2 4774654 RMD160 506b3cdad53025783fe7f9b30c9150828bdf53e9 SHA1 a00fe87cd741fd04ce49678da41341baa0b0e4cf SHA256 5bb816dceba5b6cb4829b25eb1e06af3c00b5a9f8eca1d6e711965d5020b78ab
 DIST gentoo-headers-base-2.6.24.tar.bz2 4777944 RMD160 f9ed6d92c6b12d67ecfc3301c2021757c615e0bd SHA1 cfb89d2520d57514e8fb147124832c72405addaf SHA256 891790e5abcc73b82d3e1248b221b73b4592f01d28108b9a3c17f52b9153c3f4
 DIST gentoo-headers-base-2.6.25.tar.lzma 3873979 RMD160 be1e6d2070d3369ff593233c383efdf0fad4cbbe SHA1 0d92049a2a9bf5af2a854a7cc700509b5f9432af SHA256 81b4236fedcebc84f30788e074364d0d5f10fee667fa93ff264f977334361b0b
-EBUILD linux-headers-2.6.23-r3.ebuild 1067 RMD160 176023af791e65bbe15a3c2351a5d30f74ae4c03 SHA1 31449e0b35dba4199661525effe5974cdf333ab8 SHA256 c12d66861408ee20c6ff2b2e234105b2c3fc6819bbdc91f4d1def96e1028c5e6
-EBUILD linux-headers-2.6.24.ebuild 1048 RMD160 8d47d656de3b06454ad684e7d68df7dafa2fcf48 SHA1 15c21733b3b555dac15bc93e1361240169b31c9d SHA256 fbdab9cb9daa8d3beefff7b6915940236735b66e304e2ab934f0b4e79bc94b0d
-EBUILD linux-headers-2.6.25-r1.ebuild 1072 RMD160 b23aa20a8ade2733745fe0518c82cf74f686a2fb SHA1 48df9aad1cec362a5e55558038807eeaa96bcc85 SHA256 49383d9124ee4a4bda141ba7967b7afe3bbd6beefdd67245c5665316832adf5d
-EBUILD linux-headers-2.6.25-r2.ebuild 1071 RMD160 4ce1f228640b81a5a0338ea8f31f493ce3e964ce SHA1 624c25236744131ceb758674a6af34a50c905a91 SHA256 102b851bbdd437a79e28e200016518ed56f0a588dadabe41c7c0121b70ee4b54
-MISC ChangeLog 46305 RMD160 126a4e80854dbb5b8d63ffceca3e6c390a2269a2 SHA1 bbb2d47cd2d40d8e9bcb42e281e7b6cd93383a69 SHA256 cc3a5ef17b6396ad255bdcdb981e76c55deb675020476a36ca63867466f2e983
+EBUILD linux-headers-2.6.23-r3.ebuild 1055 RMD160 e53c7f33675693464116a294d0785372890c9c9a SHA1 48f1ea083c6d786c11262bc1c82caae2434deacc SHA256 adb07cda6dc2750fd85d43de987742a3f62f93d278a616bb9e5019cfe0526504
+EBUILD linux-headers-2.6.24.ebuild 1036 RMD160 10c23aebd0c671d54be89313e0d40a12efd82b7d SHA1 64ef5882dd114123781b29fd8330fb5ca87dcd0e SHA256 2294c4c230057ddcb1d48cd9923931c233340e867fc8465d35c61eb9f6fe800f
+EBUILD linux-headers-2.6.25-r1.ebuild 1060 RMD160 51d3655d5f40697f4145a08f11da4c0f3bfde311 SHA1 408c2e3d54eb7eb3ef4515920be79ad90d600759 SHA256 5bd356576f9d165649f96dd359ab9a847fc3bc430a13ae56d00a78d850613f81
+EBUILD linux-headers-2.6.25-r3.ebuild 1059 RMD160 c202ab01bb24319b5c05b5fb2dc8e4596d29d86b SHA1 b8b14bdc6118b3829fbbce3d8fd40c8b5ea17465 SHA256 9da022eed9175c0fc34e6ce9b6383e75f8a06c21e307fb03e93f8c7f1a5ee1dd
+MISC ChangeLog 46485 RMD160 9db6e3ca9e7677213f717c33d6f893a8265e7bc9 SHA1 5d92caaacf3692e1b87cfbf53cf8c08fbe667763 SHA256 034b2354248a7d88f03501ad33b6662c01112c572936d8ff169d1588254ce338
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
